# adventofcode2024

./: .gitignore  Cargo.toml
input/: input1  input2test
src/: main.rs  match_day.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
