[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] } # command line interface
colored = "2.0"                                   # color output and bold and other cool output for terminal
anyhow = "1.0"                                    # error handeling
num = "0.4"
itertools = "0.12"
regex = "1.10"
